<resources>
    <string name="app_name">MovieApplication</string>

    <!--Menu-->
    <string name="action_help">Help</string>

    <!--Dialog text-->
    <string name="ok">OK</string>
    <string name="author_name">Author Name:</string>
    <string name="version">Version:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="duration_in_minutes">in minutes</string>
    <string name="hint_separate_by_commas"> (please separate using comma ",")</string>

    <!--Movies Activity-->
    <string name="title_details">MovieModel Details</string>
    <string name="title_movies">Movies</string>

    <!--MovieModel Fragment-->
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="starcast">Starcast</string>
    <string name="length">Duration</string>
    <string name="Rating">Rating</string>
    <string name="Poster">Poster</string>
    <string name="description">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
